--- a/startup/index.html
+++ b/startup/index.html
@@ -5,13 +5,35 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="favicon/favicon.ico" type="image/x-icon">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/29dd473d90.js" crossorigin="anonymous"></script>
     <title>Tools Easy</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <img src="imagens/logo.png" alt="Logo Tools Easy">
+    <header>
+        <img id="logo" src="imagens/logo.png" alt="Logo Tools Easy">
+        <i id="register" class="fa-solid fa-circle-user"></i>
+        <i id="location" class="fa-solid fa-location-dot"></i>
+        <span>Faça login <span>ou cadastre-se</span></span>
+        <i id="down" class="fa-solid fa-chevron-down"></i>
+        <span id="location">Informe seu CEP</span>
+        <label for="site-search"></label>
+        <input type="search" id="site-search" name="p" placeholder="busque aqui seu produto" size="30">
+        <i id="search" class="fa-solid fa-magnifying-glass"></i>
+        <i id="heart" class="fa-solid fa-heart"></i>
+        <i id="basket" class="fa-solid fa-basket-shopping"></i>
+        <span id="contato">Fale conósco</span>
+        <i id="instagram" class="fa-brands fa-instagram"></i>
+        <i id="facebook" class="fa-brands fa-facebook"></i>
+    </header>
     <main>
         
     </main>
+    <footer>
+
+    </footer>
+    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
 </html>
