--- a/startup/index.html
+++ b/startup/index.html
@@ -27,6 +27,16 @@
         <i id="instagram" class="fa-brands fa-instagram"></i>
         <i id="facebook" class="fa-brands fa-facebook"></i>
     </header>
+    <nav>
+        <a href="#" target="_self" rel="next">CATEGORIAS</a>
+        <a href="#" target="_self" rel="next">MAIS PROCURADOS</a>
+        <a href="#" target="_self" rel="next">CUPONS</a>
+        <a href="#" target="_self" rel="next">FURADEIRAS E PARFUSADEIRAS</a>
+        <a href="#" target="_self" rel="next">JOGO DE FERRAMENTAS</a>
+        <a href="#" target="_self" rel="next">COMPRESSORES</a>
+        <a href="#" target="_self" rel="next">EPIs</a>
+        <a href="#" target="_self" rel="next">NOVIDADES</a>
+    </nav>
     <main>
         
     </main>
