--- a/startup/index.html
+++ b/startup/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header>
-        <img id="logo" src="imagens/logo.png" alt="Logo Tools Easy">
+        <a href="../lauding-page/home.html" target="_blank" rel="external"><img id="logo" src="imagens/logo.png" alt="Logo Tools Easy"></a>
         <i id="register" class="fa-solid fa-circle-user"></i>
         <i id="location" class="fa-solid fa-location-dot"></i>
         <span>Faça login <span>ou cadastre-se</span></span>
