--- a/startup/index.html
+++ b/startup/index.html
@@ -13,44 +13,44 @@
 <body>
     <header>
         <a href="../lauding-page/home.html" target="_blank" rel="external"><img id="logo" src="imagens/logo.png" alt="Logo Tools Easy"></a>
-        <span id="titulo">Tools Easy</span>
-        <i id="register" class="fa-solid fa-circle-user"></i>
-        <i id="location" class="fa-solid fa-location-dot"></i>
-        <span>Faça login <span>ou cadastre-se</span></span>
+        <span id="titulo"><strong>Tools Easy</strong></span>
+        <i id="register" class="fa-solid fa-circle-user fa-lg"></i>
+        <i id="location" class="fa-solid fa-location-dot fa-lg"></i>
+        <span><strong>Faça login</strong><span><strong>ou cadastre-se</strong></span></span>
         <i id="down" class="fa-solid fa-chevron-down">
             <div>
-                <a class="users" href="#">entrar</a>
-                <span class="users" href="#">cadastrar 
+                <a class="users" href="#"><strong>entrar</strong></a>
+                <span class="users" href="#"><strong>cadastrar</strong> 
                     <i class="fa-solid fa-chevron-down">
                         <div id="people">
-                            <a class="person" href="#">usuário 1</a>
-                            <a class="person" href="#">usuário 2</a>
-                            <a class="person" href="#">usuário 3</a>
+                            <a class="person" href="#"><strong>usuário 1</strong></a>
+                            <a class="person" href="#"><strong>usuário 2</strong></a>
+                            <a class="person" href="#"><strong>usuário 3</strong></a>
                         </div>
                     </i>
                 </span>
             </div>
         </i>
-        <span id="cep">Informe seu CEP</span>
+        <span id="cep"><strong>Informe seu CEP</strong></span>
         <label for="site-search"></label>
         <input type="search" id="site-search" name="p" placeholder="busque aqui seu produto" size="30">
-        <i id="search" class="fa-solid fa-magnifying-glass"></i>
-        <i id="heart" class="fa-solid fa-heart"></i>
-        <i id="basket" class="fa-solid fa-basket-shopping"></i>
-        <span id="contato">Fale conósco</span>
-        <i id="instagram" class="fa-brands fa-instagram"></i>
-        <i id="facebook" class="fa-brands fa-facebook"></i>
+        <i id="search" class="fa-solid fa-magnifying-glass fa-lg"></i>
+        <i id="heart" class="fa-solid fa-heart fa-lg"></i>
+        <i id="basket" class="fa-solid fa-basket-shopping fa-lg"></i>
+        <span id="contato"><strong>Fale conosco</strong></span>
+        <i id="instagram" class="fa-brands fa-instagram fa-lg"></i>
+        <i id="facebook" class="fa-brands fa-facebook fa-lg"></i>
     </header>
     <nav>
-        <a href="#" target="_self" rel="next">CATEGORIAS</a>
+        <a href="#" target="_self" rel="next"><strong>CATEGORIAS</strong></a>
         <i id="categoria" class="fa-solid fa-chevron-down"></i>
-        <a href="#" target="_self" rel="next">MAIS PROCURADOS</a>
-        <a href="#" target="_self" rel="next">CUPONS</a>
-        <a href="#" target="_self" rel="next">FURADEIRAS E PARFUSADEIRAS</a>
-        <a href="#" target="_self" rel="next">JOGO DE FERRAMENTAS</a>
-        <a href="#" target="_self" rel="next">COMPRESSORES</a>
-        <a href="#" target="_self" rel="next">EPIs</a>
-        <a href="#" target="_self" rel="next">NOVIDADES</a>
+        <a href="#" target="_self" rel="next"><strong>MAIS PROCURADOS</strong></a>
+        <a href="#" target="_self" rel="next"><strong>CUPONS</strong></a>
+        <a href="#" target="_self" rel="next"><strong>FURADEIRAS E PARFUSADEIRAS</strong></a>
+        <a href="#" target="_self" rel="next"><strong>JOGO DE FERRAMENTAS</strong></a>
+        <a href="#" target="_self" rel="next"><strong>COMPRESSORES</strong></a>
+        <a href="#" target="_self" rel="next"><strong>EPIs</strong></a>
+        <a href="#" target="_self" rel="next"><strong>NOVIDADES</strong></a>
     </nav>
     <main>
         
