--- a/startup/index3.html
+++ b/startup/index3.html
@@ -13,23 +13,23 @@
 <body>
     <header>
         <div class="row">
-            <div class="col-3">
+            <div class="col-3 cabecalho">
                 <img src="imagens/logo.png" alt="Logo do site">
                 <span id="titulo">Tools Easy</span>
             </div>
-            <div class="col-6">
+            <div class="col-6 cabecalho">
                 <label for="site-search"></label>
                 <input type="search" id="site-search" name="p" placeholder="busque aqui seu produto" size="30">
                 <div id="pesquisa">
                     <i id="search" class="fa-solid fa-magnifying-glass fa-lg"></i>
                 </div>
             </div>
-            <div class="col-3">
+            <div class="col-3 cabecalho">
                 <div id="usuario">
                     <i class="fa-solid fa-circle-user fa-lg"></i>
                     <span>Faça login ou cadastre-se</span>
                     <div class="dropdown">
-                        <i id="down" class="fa-solid fa-chevron-down fa-lg"></i>
+                        <i class="fa-solid fa-chevron-down fa-lg"></i>
                         <div class="dropdown-content">
                             <a href="#">entrar</a>
                             <div class="dropdown2">
@@ -60,5 +60,49 @@
             </div>
         </div>
     </header>
+    <nav>
+        <div class="row">
+            <div class="col-2 menu">
+               <a href="#">CATEGORIAS</a>
+               <div class="dropdown">
+                <i id="down" class="fa-solid fa-chevron-down fa-lg"></i>
+                <div class="dropdown-content2">
+                    <a href="#">FURADEIRAS E PARAFUSADEIRAS</a>
+                    <a href="#">JOGOS DE FERRAMENTAS</a>
+                    <a href="#">COMPRESSORES</a>
+                    <a href="#">EPIs</a>
+                    <a href="#">CUPONS</a>
+                    <a href="#">NOVIDADES</a>
+                </div>
+               </div>
+            </div>
+            <div class="col-5 menu">
+                <div class="row">
+                    <div class="col-6">
+                        <a href="#">FURADEIRAS E PARAFUSADEIRAS</a>
+                    </div>
+                    <div class="col-6">
+                        <a href="#">JOGOS DE FERRAMENTAS</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-5 menu">
+                <div class="row">
+                    <div class="col-3">
+                        <a href="">COMPRESSORES</a>
+                    </div>
+                    <div class="col-3">
+                        <a href="#">EPIs</a>
+                    </div>
+                    <div class="col-3">
+                        <a href="#">CUPONS</a>
+                    </div>
+                    <div class="col-3">
+                        <a href="#">NOVIDADES</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </nav>
 </body>
 </html>
