--- a/startup/index.html
+++ b/startup/index.html
@@ -4,61 +4,105 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tools Easy</title>
     <link rel="shortcut icon" href="favicon/favicon.ico" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/29dd473d90.js" crossorigin="anonymous"></script>
-    <title>Tools Easy</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header>
-        <a href="../lauding-page/home.html" target="_blank" rel="external"><img id="logo" src="imagens/logo.png" alt="Logo Tools Easy"></a>
-        <span id="titulo"><strong>Tools Easy</strong></span>
-        <i id="register" class="fa-solid fa-circle-user fa-lg"></i>
-        <i id="location" class="fa-solid fa-location-dot fa-lg"></i>
-        <span><strong>Faça login</strong><span><strong>ou cadastre-se</strong></span></span>
-        <i id="down" class="fa-solid fa-chevron-down">
-            <div>
-                <a class="users" href="#"><strong>entrar</strong></a>
-                <span class="users" href="#"><strong>cadastrar</strong> 
-                    <i class="fa-solid fa-chevron-down">
-                        <div id="people">
-                            <a class="person" href="#"><strong>usuário 1</strong></a>
-                            <a class="person" href="#"><strong>usuário 2</strong></a>
-                            <a class="person" href="#"><strong>usuário 3</strong></a>
-                        </div>
-                    </i>
-                </span>
+        <div class="row">
+            <div class="col-3 cabecalho">
+                <img src="imagens/logo.png" alt="Logo do site">
+                <span id="titulo">Tools Easy</span>
             </div>
-        </i>
-        <span id="cep"><strong>Informe seu CEP</strong></span>
-        <label for="site-search"></label>
-        <input type="search" id="site-search" name="p" placeholder="busque aqui seu produto" size="30">
-        <i id="search" class="fa-solid fa-magnifying-glass fa-lg"></i>
-        <i id="heart" class="fa-solid fa-heart fa-lg"></i>
-        <i id="basket" class="fa-solid fa-basket-shopping fa-lg"></i>
-        <span id="contato"><strong>Fale conosco</strong></span>
-        <i id="instagram" class="fa-brands fa-instagram fa-lg"></i>
-        <i id="facebook" class="fa-brands fa-facebook fa-lg"></i>
+            <div class="col-6 cabecalho">
+                <label for="site-search"></label>
+                <input type="search" id="site-search" name="p" placeholder="busque aqui seu produto" size="30">
+                <div id="pesquisa">
+                    <i id="search" class="fa-solid fa-magnifying-glass fa-lg"></i>
+                </div>
+            </div>
+            <div class="col-3 cabecalho">
+                <div id="usuario">
+                    <i class="fa-solid fa-circle-user fa-lg"></i>
+                    <span>Faça login ou cadastre-se</span>
+                    <div class="dropdown">
+                        <i class="fa-solid fa-chevron-down fa-lg"></i>
+                        <div class="dropdown-content">
+                            <a href="#">entrar</a>
+                            <div class="dropdown2">
+                                <a href="#">cadastrar</a>
+                                <div class="sub-dropdown-content">
+                                    <a href="#">usuário 1</a>
+                                    <a href="#">usuário 2</a>
+                                    <a href="#">usuário 3</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div id="contatos">
+                    <span>Fale conosco</span>
+                    <i id="instagram" class="fa-brands fa-instagram fa-lg"></i>
+                    <i class="fa-brands fa-whatsapp fa-lg"></i>
+                    <i id="facebook" class="fa-brands fa-facebook fa-lg"></i>
+                </div>
+                <div id="fav-icone">
+                    <i id="heart" class="fa-solid fa-heart fa-lg"></i>
+                    <i id="basket" class="fa-solid fa-basket-shopping fa-lg"></i>
+                </div>
+                <div id="cep">
+                    <i id="location" class="fa-solid fa-location-dot fa-lg"></i>
+                    <span>Informe seu CEP</span>
+                </div>
+            </div>
+        </div>
     </header>
     <nav>
-        <a href="#" target="_self" rel="next"><strong>CATEGORIAS</strong></a>
-        <i id="categoria" class="fa-solid fa-chevron-down"></i>
-        <a href="#" target="_self" rel="next"><strong>MAIS PROCURADOS</strong></a>
-        <a href="#" target="_self" rel="next"><strong>CUPONS</strong></a>
-        <a href="#" target="_self" rel="next"><strong>FURADEIRAS E PARFUSADEIRAS</strong></a>
-        <a href="#" target="_self" rel="next"><strong>JOGO DE FERRAMENTAS</strong></a>
-        <a href="#" target="_self" rel="next"><strong>COMPRESSORES</strong></a>
-        <a href="#" target="_self" rel="next"><strong>EPIs</strong></a>
-        <a href="#" target="_self" rel="next"><strong>NOVIDADES</strong></a>
+        <div class="row">
+            <div class="col-2 menu">
+               <a href="#">CATEGORIAS</a>
+               <div class="dropdown">
+                <i id="down" class="fa-solid fa-chevron-down fa-lg"></i>
+                <div class="dropdown-content2">
+                    <a href="#">FURADEIRAS E PARAFUSADEIRAS</a>
+                    <a href="#">JOGOS DE FERRAMENTAS</a>
+                    <a href="#">COMPRESSORES</a>
+                    <a href="#">EPIs</a>
+                    <a href="#">CUPONS</a>
+                    <a href="#">NOVIDADES</a>
+                </div>
+               </div>
+            </div>
+            <div class="col-5 menu">
+                <div class="row">
+                    <div class="col-6">
+                        <a href="#">FURADEIRAS E PARAFUSADEIRAS</a>
+                    </div>
+                    <div class="col-6">
+                        <a href="#">JOGOS DE FERRAMENTAS</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-5 menu">
+                <div class="row">
+                    <div class="col-3">
+                        <a href="">COMPRESSORES</a>
+                    </div>
+                    <div class="col-3">
+                        <a href="#">EPIs</a>
+                    </div>
+                    <div class="col-3">
+                        <a href="#">CUPONS</a>
+                    </div>
+                    <div class="col-3">
+                        <a href="#">NOVIDADES</a>
+                    </div>
+                </div>
+            </div>
+        </div>
     </nav>
-    <main>
-        
-    </main>
-    <footer>
-
-    </footer>
-    
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
 </html>
