--- a/startup/index.html
+++ b/startup/index.html
@@ -14,7 +14,7 @@
     <header>
         <div class="row">
             <div class="col-3 cabecalho">
-                <img src="imagens/logo.png" alt="Logo do site">
+                <a href="../lauding-page/home.html"><img src="imagens/logo.png" alt="Logo do site"></a>
                 <span id="titulo">Tools Easy</span>
             </div>
             <div class="col-6 cabecalho">
