--- a/lauding-page/home.html
+++ b/lauding-page/home.html
@@ -32,7 +32,7 @@
             <br>
             <p class="lead">Bem vindo! <br> Tooleasy é sua plataforma de aluguel, Tenha acesso a todo tipo de peça de construção, <br>tudo no conforto de sua casa.<br>
                 </p>
-            <a href="/campgrounds" class="btn btn-lg btn-secondary font-weight-bold text-dark border-white bg-white">Explorar Catálogo</a>
+            <a href="../startup/index.html" class="btn btn-lg btn-secondary font-weight-bold text-dark border-white bg-white">Explorar Catálogo</a>
         </main>
 
         <footer class="mt-auto text-white-50">
