--- a/lauding-page/home.html
+++ b/lauding-page/home.html
@@ -18,8 +18,8 @@
                 <nav class="nav nav-masthead justify-content-center float-md-right">
                     <a class="nav-link active" aria-current="page" href="#">Página Inicial</a>
                     
-                    <a class="nav-link" href="/login">Entrar</a>
-                    <a class="nav-link" href="/register">Criar conta</a>
+                    <a class="nav-link" href="../startup/tela-login/login.html">Entrar</a>
+                    <a class="nav-link" href="../startup/tela-cadastro/cadastro.html">Criar conta</a>
                     <a class="nav-link" href="/logout">Sair</a>
                     
                 </nav>
