--- a/startup/index.html
+++ b/startup/index.html
@@ -31,13 +31,13 @@
                     <div class="dropdown">
                         <i class="fa-solid fa-chevron-down fa-lg"></i>
                         <div class="dropdown-content">
-                            <a href="#">entrar</a>
+                            <a href="tela-login/login.html">entrar</a>
                             <div class="dropdown2">
                                 <a href="#">cadastrar</a>
                                 <div class="sub-dropdown-content">
-                                    <a href="#">usuário 1</a>
-                                    <a href="#">usuário 2</a>
-                                    <a href="#">usuário 3</a>
+                                    <a href="tela-cadastro/cadastro.html">usuário 1</a>
+                                    <a href="tela-cadastro/cadastro.html">usuário 2</a>
+                                    <a href="tela-cadastro/cadastro.html">usuário 3</a>
                                 </div>
                             </div>
                         </div>
