--- a/startup/tela-login/login.html
+++ b/startup/tela-login/login.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="shortcut icon" href="favicon/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../favicon/favicon.ico" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/29dd473d90.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
@@ -15,7 +15,11 @@
 </head>
 <body>
     <main>
+        <header>
+            <img src="../imagens/logo.png" alt="Logo do site">
+        </header>
         <form action="">
+            <br>
             <div>
                 <label for="email">EMAIL:</label>
             </div>
@@ -28,9 +32,9 @@
             <br>
             <input type="password" name="psw" id="senha">
             <br><br>
-            <button type="submit"><a href="../index.html">Entrar</a></button>
+            <input class="btn btn-primary" type="submit" value="Entrar">
             <br><br>
-            <button type="submit">Esqueceu sua senha ?</button>
+            <input class="btn btn-primary" type="button" value="Esqueceu sua senha ?">
             <br><br>
             <span>Não tem conta?</span>
             <a href="../tela-cadastro/cadastro.html">Cadastre-se</a>
