--- a/startup/tela-cadastro/cadastro.html
+++ b/startup/tela-cadastro/cadastro.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Senha</title>
-    <link rel="shortcut icon" href="favicon/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../favicon/favicon.ico" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/29dd473d90.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
@@ -15,7 +15,11 @@
 </head>
 <body>
     <main>
+        <header>
+            <img src="../imagens/logo.png" alt="Logo do site">
+        </header>
         <form action="">
+            <br>
             <div>
                 <label for="nome">Nome:</label>
             </div>
@@ -46,10 +50,9 @@
             <br>
             <input type="password" name="psw2" id="confirmar-senha">
             <br><br>
-            <button type="submit"><a href="../index.html">Cadastrar</a></button>
-            <div>
-                <a href="../tela-login/login.html">Faça login em vez disso</a>
-            </div>
+            <input class="btn btn-primary" type="submit" value="Cadastrar">
+            <br><br>
+            <a class="btn btn-primary" href="../tela-login/login.html" role="button">Faça login em vez disso</a>
         </form>
     </main>
 </body>
