--- a/startup/index.html
+++ b/startup/index.html
@@ -27,7 +27,7 @@
             <div class="col-3 cabecalho">
                 <div id="usuario">
                     <i class="fa-solid fa-circle-user fa-lg"></i>
-                    <span>Faça login ou cadastre-se</span>
+                    <span>Faça login <br>ou cadastre-se</span>
                     <div class="dropdown">
                         <i class="fa-solid fa-chevron-down fa-lg"></i>
                         <div class="dropdown-content">
