--- a/startup/index.html
+++ b/startup/index.html
@@ -104,5 +104,99 @@
             </div>
         </div>
     </nav>
+    <main>
+        <div class="row">
+            <div class="col-3 conteudo-principal">
+                <div class="foto">
+                    <img class="produto" src="imagens/aparador-de-grama.png" alt="Aparador de grama">
+                </div>
+                <div class="descricao">
+                    <span>Aparador de Grama Elétrico AP1000T 220V Tramontina</span>
+                </div>
+                <div class="botao">
+                    <a href="#" class="btn btn-primary">Alugar</a>
+                </div>
+            </div>
+            <div class="col-3 conteudo-principal">
+                <div class="foto">
+                    <img class="produto" src="imagens/Betoneira.png" alt="Betoneira">
+                </div>
+                <div class="descricao">
+                    <span>Betoneira CS 400L Motor à Gasolina 5,5HP Lifan CSM</span>
+                </div>
+                <div class="botao">
+                    <a href="#" class="btn btn-primary">Alugar</a>
+                </div>
+            </div>
+            <div class="col-3 conteudo-principal">
+                <div class="foto">
+                    <img class="produto" src="imagens/cabo-de-bateria.png" alt="Cabo de bateria">
+                </div>
+                <div class="descricao">
+                    <span>Cabo De Bateria 550a Vermelho/preto 10mmx2,5 Metros -mister</span>
+                </div>
+                <div class="botao">
+                    <a href="#" class="btn btn-primary">Alugar</a>
+                </div>
+            </div>
+            <div class="col-3 conteudo-principal">
+                <div class="foto">
+                    <img class="produto" src="imagens/chave-de-impacto-makita-bateria-18v.png" alt="Chave de impacto makita bateria">
+                </div>
+                <div class="descricao">
+                    <span>Chave De Impacto Makita Bateria 18v 1/2 1000nm Versão Solo</span>
+                </div>
+                <div class="botao">
+                    <a href="#" class="btn btn-primary">Alugar</a>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-3 conteudo-principal">
+                <div class="foto">
+                    <img class="produto" src="imagens/compressor-de-ar.png" alt="Compressor de ar">
+                </div>
+                <div class="descricao">
+                    <span>Compressor De Ar 8,5 Pés + Esmerilhadeira Angular Pneumática</span>
+                </div>
+                <div class="botao">
+                    <a href="#" class="btn btn-primary">Alugar</a>
+                </div>
+            </div>
+            <div class="col-3 conteudo-principal">
+                <div class="foto">
+                    <img class="produto" src="imagens/disco-de-rebolo.png" alt="Disco rebolo desbaste diamantado concreto 115mm M14">
+                </div>
+                <div class="descricao">
+                    <span>Disco Rebolo Desbaste Diamantado Concreto 115mm M14</span>
+                </div>
+                <div class="botao">
+                    <a href="#" class="btn btn-primary">Alugar</a>
+                </div>
+            </div>
+            <div class="col-3 conteudo-principal">
+                <div class="foto">
+                    <img class="produto" src="imagens/maquina-de-pintura-eletrica.png" alt="Máquina de pintura elétrica">
+                </div>
+                <div class="descricao">
+                    <span>Máquina De Pintura Elétrica 900W Airless MPA 120 220V Vonder</span>
+                </div>
+                <div class="botao">
+                    <a href="#" class="btn btn-primary">Alugar</a>
+                </div>
+            </div>
+            <div class="col-3 conteudo-principal">
+                <div class="foto">
+                    <img class="produto" src="imagens/mascara-de-solda.png" alt="Máscara de solda">
+                </div>
+                <div class="descricao">
+                    <span>Máscara de Solda Automática MSL-3500 Lynus</span>
+                </div>
+                <div class="botao">
+                    <a href="#" class="btn btn-primary">Alugar</a>
+                </div>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
