--- a/startup/index.html
+++ b/startup/index.html
@@ -27,18 +27,14 @@
             <div class="col-3 cabecalho">
                 <div id="usuario">
                     <i class="fa-solid fa-circle-user fa-lg"></i>
-                    <span>Faça login <br>ou cadastre-se</span>
+                    <span><a href="tela-login/login.html">Faça login</a> <br>ou cadastre-se</span>
                     <div class="dropdown">
                         <i class="fa-solid fa-chevron-down fa-lg"></i>
                         <div class="dropdown-content">
-                            <a href="tela-login/login.html">entrar</a>
                             <div class="dropdown2">
-                                <a href="#">cadastrar</a>
-                                <div class="sub-dropdown-content">
-                                    <a href="tela-cadastro/cadastro.html">usuário 1</a>
-                                    <a href="tela-cadastro/cadastro.html">usuário 2</a>
-                                    <a href="tela-cadastro/cadastro.html">usuário 3</a>
-                                </div>
+                                <a href="tela-cadastro/cadastro.html">usuário 1</a>
+                                <a href="tela-cadastro/cadastro.html">usuário 2</a>
+                                <a href="tela-cadastro/cadastro.html">usuário 3</a>
                             </div>
                         </div>
                     </div>
